Generalize matching to support matching drones, larvae, butterflies, etc

--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,10 @@ configurations {
 }
 
 dependencies {
-	compile("net.sengir.forestry:forestry_1.7.10:${config.forestry.version}:dev") {
+	compile("net.sengir.forestry:forestry_1.7.10:${config.forestry.version}:api") {
+		transitive = false
+	}
+	runtime("net.sengir.forestry:forestry_1.7.10:${config.forestry.version}:dev") {
 		transitive = false
 	}
 }
